tests/Checker/everything/errors/5b.vc
void test() {
    int a = 1;
}

int main() {
    int a = b;
    return 1;
}
